[gd_scene load_steps=6 format=3 uid="uid://cjlbn1a7ajuc1"]

[ext_resource type="Script" path="res://tests/TestArenaHazards.gd" id="1_qx8ck"]
[ext_resource type="PackedScene" path="res://characters/PlayerCharacter.tscn" id="2_player"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.384314, 0.454902, 0.54902, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 3
ambient_light_color = Color(0.7, 0.7, 0.7, 1)
ambient_light_energy = 0.5

[node name="TestArenaHazards" type="Node3D"]
script = ExtResource("1_qx8ck")

[node name="ArenaRoot" type="Node3D" parent="."]

[node name="TestPlayer" parent="." instance=ExtResource("2_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 20, 15, 0)
fov = 60.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.612372, 0.353553, 0, 0.5, 0.866025, -0.707107, -0.612372, 0.353553, 0, 10, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Instructions" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 120.0
text = "Arena Hazards Test
WASD: Move Player
Space: Jump
R: Respawn at Random Spawn Point"

[node name="HealthLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 140.0
offset_right = 200.0
offset_bottom = 170.0
theme_override_font_sizes/font_size = 24
text = "Health: 100/100"

[node name="HazardLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 180.0
offset_right = 300.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 20
text = "Safe"
